--- a/microservicecloud-provider-dept-8001/src/main/resources/application.yml
+++ b/microservicecloud-provider-dept-8001/src/main/resources/application.yml
@@ -8,7 +8,7 @@ mybatis:
   - classpath:mybatis/mapper/**/*.xml
 spring:
   application:
-    admin: microservice-dept
+    name: microservicecloud-dept
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: org.gjt.mm.mysql.Driver
@@ -16,8 +16,23 @@ spring:
     username: root
     password: "@Wangfang123"
     dbcp2:
-      min-idle: 5
-      initial-size: 5
-      max-total: 5
-      max-wait-millis: 200
+      min-idle: 5               # 连接池最小连接数
+      initial-size: 5          # 初始化连接数
+      max-total: 5             # 最大连接数
+      max-wait-millis: 200    # 等待连接最大超时时间
+      validation-query: SELECT 1
+eureka:
+  client:                      # 客户端注册eureka服务列表
+    service-url:
+      #单机版注册地址 http://localhost:7001/eureka
+      defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
+  instance:
+    instance-id: microservicecloud-dept8001
+    prefer-ip-address: true  #访问地址显示ip
 
+
+info:
+  app.name: wangfang-microservicecloud
+  company.name: www.wangfang.com
+  build.artifactId: ${project.artifactId}
+  build.version: ${project.version}
