--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>microservicecloud-eureka-7003</module>
         <module>microservicecloud-provider-dept-8002</module>
         <module>microservicecloud-provider-dept-8003</module>
+        <module>microservicecloud-consumer-dept-feign</module>
     </modules>
 
     <packaging>pom</packaging>
@@ -115,6 +116,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-resources-plugin</artifactId>
+                <version>2.6</version>
                 <configuration>
                     <delimiters>
                         <delimit>$</delimit>
