--- a/microservicecloud-consumer-dept-feign/src/main/resources/application.yml
+++ b/microservicecloud-consumer-dept-feign/src/main/resources/application.yml
@@ -5,3 +5,6 @@ eureka:
     service-url:
       defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
     register-with-eureka: false
+feign:
+  hystrix:
+    enabled : true
